argo-apps/argocd/init-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-repo-server
  namespace: argocd
spec:
  template:
    spec:
